<resources>
    <string name="app_name">SoccerKeeper</string>
    <string name="start">START</string>
    <string name="about">about</string>
    <string name="soccer_keeper">Soccer Keeper</string>
    <string name="game_title">Game Title</string>
    <string name="time">Time (min)</string>
    <string name="location">Location</string>
    <string name="half_length">Half Length</string>

    <string name="aboutMsg">This app keeps statistics of a soccer game in real time and exports game statistics to your device\'s storage. \nTo use the app, first input all specified data in the next screen. Then use the next stage as follows: \nPress start when the game begins. After that, press the appropriate button whenever a team commits a foul or is awarded a corner kick. \nTo record shots, flip the switch to the appropriate team, and then click on the shot\'s location on the field. A list will replace the buttons for you to input the shot taker and the type of shot. \nWhen the half is over, press the half button. \nAny time you would like to view the current stats, simply hold down on the stat button.</string>
    <string name="about_dialog_ok">OK</string>
    <string name="home_team">Home Team</string>
    <string name="away_team">Away Team</string>
    <string name="start_game">Start Game</string>
    <string name="something_else">Something Else</string>
    <string name="weather">Weather</string>
    <string name="shots">Shots</string>
    <string name="shots_on_target">Shots On Target</string>
    <string name="goals">Goals</string>
    <string name="possession">Possession</string>
    <string name="corners">Corners</string>
    <string name="free_kicks">Free Kicks</string>

    <string-array name="teams_array">
        <item>Saints men</item>
        <item>Saints women</item>
        <item>Clarkson men</item>
        <item>Clarkson women</item>
    </string-array>


    <string-array name="sides_array">
        <item>Left</item>
        <item>Right</item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="team_1_corner">Team 1 Corner</string>
    <string name="team_1_foul">Team 1 Foul</string>
    <string name="team_2_corner">Team 2 Corner</string>
    <string name="team_2_foul">Team 2 Foul</string>
    <string name="stats">Stats</string>
    <string name="pause">Halftime</string>
    <string name="attacking_team">Attacking Team</string>
    <string name="team_1">Team 1</string>
    <string name="team_2">Team 2</string>
    <string name="ok">OK</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="player_3">Player 3</string>
    <string name="player_4">Player 4</string>
    <string name="player_5">Player 5</string>
    <string name="player_6">Player 6</string>
    <string name="player_7">Player 7</string>
    <string name="player_8">Player 8</string>
    <string name="player_9">Player 9</string>
    <string name="player_10">Player 10</string>
    <string name="player_11">Player 11</string>
    <string name="shot">Shot</string>
    <string name="shot_on_target">Shot On Target</string>
    <string name="list2_error_checking">Please select a player and an action</string>
    <string name="referee">Referee</string>
    <string name="next">next</string>
    <string name="home_team_start_side">Home Team Start Side</string>
</resources>
